[gd_scene load_steps=10 format=3 uid="uid://hcf1i788ufv8"]

[ext_resource type="FontFile" uid="uid://c1rx8lmdovuo4" path="res://Assets/Fonts/VT323-Regular.ttf" id="1_5cf1o"]
[ext_resource type="Script" path="res://Screens/saves-screen.gd" id="1_avw2c"]
[ext_resource type="PackedScene" uid="uid://crnf5vthlii6q" path="res://Global/menu_button.tscn" id="2_eupsf"]
[ext_resource type="Texture2D" uid="uid://cgd77evvex27a" path="res://Assets/UI/Menu-Button.png" id="2_wm6im"]
[ext_resource type="Script" path="res://Global/menu_button.gd" id="3_74n4y"]

[sub_resource type="LabelSettings" id="LabelSettings_pan48"]
font = ExtResource("1_5cf1o")
font_size = 100
font_color = Color(0, 1, 0.313726, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvyu4"]
atlas = ExtResource("2_wm6im")
region = Rect2(5, 5, 200, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5rb6"]
atlas = ExtResource("2_wm6im")
region = Rect2(215, 5, 200, 50)

[sub_resource type="LabelSettings" id="LabelSettings_ndgiu"]
font = ExtResource("1_5cf1o")
font_size = 50
font_color = Color(0, 1, 0.313726, 1)

[node name="Saves" type="Node2D"]
script = ExtResource("1_avw2c")

[node name="Background" type="CanvasLayer" parent="."]

[node name="Background" type="ColorRect" parent="Background"]
anchors_preset = -1
anchor_right = 0.030303
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Scene Title" type="Label" parent="Background"]
anchors_preset = -1
anchor_right = 0.030303
offset_top = 128.0
offset_right = 1920.0
offset_bottom = 249.0
text = "Select Save Slot"
label_settings = SubResource("LabelSettings_pan48")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Back Button" parent="Background" instance=ExtResource("2_eupsf")]
offset_left = 1557.0
offset_top = 930.0
offset_right = 1757.0
offset_bottom = 980.0
scale = Vector2(1.5, 1.5)
button_text = "Back"
metadata/_edit_use_anchors_ = true

[node name="Savefiles" type="CanvasLayer" parent="."]

[node name="Save Slot 1" type="TextureButton" parent="Savefiles" node_paths=PackedStringArray("button_label")]
offset_left = 661.0
offset_top = 304.0
offset_right = 1323.0
offset_bottom = 421.0
texture_normal = SubResource("AtlasTexture_yvyu4")
texture_hover = SubResource("AtlasTexture_d5rb6")
stretch_mode = 0
script = ExtResource("3_74n4y")
button_text = "Save Slot #1"
button_label = NodePath("Label")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Savefiles/Save Slot 1"]
layout_mode = 0
offset_left = 24.0
offset_top = 10.0
offset_right = 637.0
offset_bottom = 107.0
text = "SAVE SLOT"
label_settings = SubResource("LabelSettings_ndgiu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Save Slot 2" type="TextureButton" parent="Savefiles" node_paths=PackedStringArray("button_label")]
offset_left = 661.0
offset_top = 454.0
offset_right = 1323.0
offset_bottom = 571.0
texture_normal = SubResource("AtlasTexture_yvyu4")
texture_hover = SubResource("AtlasTexture_d5rb6")
stretch_mode = 0
script = ExtResource("3_74n4y")
button_text = "Save Slot #2"
button_label = NodePath("Label")

[node name="Label" type="Label" parent="Savefiles/Save Slot 2"]
layout_mode = 0
offset_left = 24.0
offset_top = 10.0
offset_right = 637.0
offset_bottom = 107.0
text = "SAVE SLOT"
label_settings = SubResource("LabelSettings_ndgiu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Save Slot 3" type="TextureButton" parent="Savefiles" node_paths=PackedStringArray("button_label")]
offset_left = 661.0
offset_top = 604.0
offset_right = 1323.0
offset_bottom = 721.0
texture_normal = SubResource("AtlasTexture_yvyu4")
texture_hover = SubResource("AtlasTexture_d5rb6")
stretch_mode = 0
script = ExtResource("3_74n4y")
button_text = "Save Slot #3"
button_label = NodePath("Label")

[node name="Label" type="Label" parent="Savefiles/Save Slot 3"]
layout_mode = 0
offset_left = 24.0
offset_top = 10.0
offset_right = 637.0
offset_bottom = 107.0
text = "SAVE SLOT"
label_settings = SubResource("LabelSettings_ndgiu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Debugg" type="CanvasLayer" parent="."]

[node name="New" type="Button" parent="Debugg"]
offset_left = 53.0
offset_top = 921.0
offset_right = 210.0
offset_bottom = 952.0
text = "Jump to New Game"

[node name="Intro" type="Button" parent="Debugg"]
offset_left = 53.0
offset_top = 963.0
offset_right = 164.0
offset_bottom = 994.0
text = "Jump to Intro"

[node name="Game" type="Button" parent="Debugg"]
offset_left = 52.0
offset_top = 1008.0
offset_right = 173.0
offset_bottom = 1039.0
text = "Jump To Game"

[connection signal="pressed" from="Background/Back Button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Debugg/New" to="." method="_on_new_pressed"]
[connection signal="pressed" from="Debugg/Intro" to="." method="_on_intro_pressed"]
[connection signal="pressed" from="Debugg/Game" to="." method="_on_game_pressed"]
